[LIGO-94] fix alignment of cards

--- a/gitlab-pages/website/static/css/custom.css
+++ b/gitlab-pages/website/static/css/custom.css
@@ -487,7 +487,7 @@ body
   justify-content: space-around;
   padding: var(--padding-level-1);
   flex-wrap: wrap;
-  align-items: flex-start;
+  align-items: stretch;
 }
 
 /** Feature Cards **/
@@ -498,7 +498,6 @@ body
   align-items: center;
   justify-content: flex-start;
   max-width: 30%;
-  height: auto;
   background-color: var(--color-light-gray);
 }
 
